# HALO

./: .env.example  .gitignore  CLAUDE.md  Makefile  README.md  STATUS.md  pyproject.toml
.github/workflows/: ci.yml
docs/: AGENTS.md  GOVERNANCE.md  INTEGRATION.md  WORKFLOW.md
src/halo/: __init__.py  app.py  demo.py  llm.py
src/halo/edu/: __init__.py  attest.py  brief.py  corpus.py  demo.py  diagrams.py  dosing.py  drill.py  fhir.py  lookup.py  models.py  render.py  routes.py
src/halo/edu/content/: breech_delivery.json  lateral_canthotomy.json  organophosphate.json  perimortem_cesarean.json
src/halo/mci/: __init__.py  board.py  census.py  compliance.py  demo.py  edu_links.py  extract.py  fhir_out.py  models.py  panel.py  reconcile.py  scenarios.py  surge.py  triage.py
src/halo/sim/: __init__.py  cases.py
src/halo/sim/cases/: breech_delivery.json  io_access_penetrating_abdomen.json  lateral_canthotomy.json  organophosphate_decon.json  perimortem_cesarean.json
src/halo/static/: index.html  sim.html
tests/: test_app.py  test_compliance.py  test_edu_app_mount.py  test_edu_attest.py  test_edu_brief.py  test_edu_corpus.py  test_edu_dosing.py  test_edu_drill.py  test_edu_fhir.py  test_edu_links.py  test_edu_lookup.py  test_edu_render.py  test_edu_routes.py  test_llm.py  test_mci_board.py  test_mci_extract.py  test_mci_fhir_out.py  test_mci_panel.py  test_mci_reconcile.py  test_mci_surge.py  test_mci_triage.py  test_sim.py  test_smoke.py
tests/fixtures/: ed_census.json  ed_waiting.json  mci_goldset.json
