[project]
name = "halo"
version = "0.1.0"
description = "HALO — agentic AI in healthcare. Built live at the Abridge x Anthropic x Lightspeed hackathon (SF, 2026-07-18)."
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
authors = [{ name = "GOATnote Inc." }]
dependencies = [
    "anthropic>=0.116",
    "pydantic>=2",
    "fastapi>=0.110",
    "uvicorn>=0.29",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "ruff>=0.5",
    "mypy>=1.10",
    "httpx>=0.27",
]

[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
halo = ["static/*"]
"halo.edu" = ["content/*.json"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
extend-select = ["I"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.11"
files = ["src"]
strict = true
